fix video alignment

--- a/main.css
+++ b/main.css
@@ -146,13 +146,11 @@ body{padding:0;
 
 }
  #video-container { display:none;
-   margin-top:60px;
-   height: 80%;
    width:100%;
-
+   height:75%;
  }
  #video { display:none;
-   height: 70%;
+   height: 100%;
    width:100%;
  }
 
@@ -161,6 +159,7 @@ body{padding:0;
 }
 
 .spacer{
+  display:block;
   width:100%;
   height:60px;
 }
